@@ -4143,3 +4143,14 @@ Changes to be committed:
 	modified:   ZGame/Dx.Sdk/Dx10.07aug.Tut/T.dx10.tut.07.aug.cs
 	modified:   ZGame/Dx.Sdk/Dx10.07aug.Tut/Tutorial02/Tutorial02.cpp
 
++---------+---------+---------+---------+---------+---------+---------+---------+ 
+d.2015/10/21.14_58_40.66.K.MzM.T@WS 
+On branch master
+Your branch is up-to-date with 'origin/master'.
+
+Changes to be committed:
+  (use "git reset HEAD <file>..." to unstage)
+
+	modified:   History.txt
+	modified:   ZGame/Dx.Sdk/Dx10.07aug.Tut/T.dx10.tut.07.aug.cs
+
